@@ -1039,18 +1039,25 @@ totality
 {- | Parses a type provider
 
 @
-Provider ::= '%' 'provide' '(' FnName TypeSig ')' 'with' Expr;
+Provider ::= '%' 'provide' Provider_What? '(' FnName TypeSig ')' 'with' Expr;
+ProviderWhat ::= 'proof' | 'term' | 'type' | 'postulate'
 @
  -}
 provider :: SyntaxInfo -> IdrisParser [PDecl]
 provider syn = do try (lchar '%' *> reserved "provide");
+                  what <- provideWhat
                   lchar '('; n <- fnName; lchar ':'; t <- typeExpr syn; lchar ')'
                   fc <- getFC
                   reserved "with"
                   e <- expr syn
-                  return  [PProvider syn fc n t e]
+                  return  [PProvider syn fc what n t e]
                <?> "type provider"
-
+  where provideWhat :: IdrisParser ProvideWhat
+        provideWhat = option ProvAny
+                        (      ((reserved "proof" <|> reserved "term" <|> reserved "type") *>
+                                pure ProvTerm)
+                           <|> (reserved "postulate" *> pure ProvPostulate)
+                   <?> "provider variety")
 {- | Parses a transform
 
 @
